# tensor-viz

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  ci.dockerfile  development.dockerfile  docker.mk  environment.yml  requirements-dev.txt  setup.py  tasks.mk  try.dockerfile  tv-try  unit-tests.mk
cmake/: FindGLFW.cmake
doc/: Samples.ipynb
doc/cpp/: main_page.md
doc/source/: conf.py  index.rst  modules.rst  tenviz.io.rst  tenviz.rst
include/tenviz/: anode.hpp  bbox.hpp  bounds.hpp  bsphere.hpp  camera.hpp  camera_manipulator.hpp  context.hpp  context_resource.hpp  cuda_error.hpp  cuda_memory.hpp  dim.hpp  draw_program.hpp  dtype.hpp  eigen_common.hpp  error.hpp  gl_buffer.hpp  gl_error.hpp  gl_framebuffer.hpp  gl_shader.hpp  gl_shader_program.hpp  gl_texture.hpp  math.hpp  pose.hpp  projection.hpp  read_file.hpp  scene.hpp  scoped_bind.hpp  se3.hpp  so3.hpp  style.hpp  time_measurer.hpp  trackball_camera_manipulator.hpp  viewer.hpp  wasd_camera_manipulator.hpp
samples/: cameras.py  draw_program.py  mesh.py  multiprocess.py  pointcloud.py  quiver.py  render_to_image.py  simple.py  texture.py
samples/data/mesh/: teapot.ply  teapot.stl
samples/shaders/: multiple_out.frag  multiple_out.vert  phong.frag  phong.vert  simple.frag  simple.vert
src/: CMakeLists.txt  _ctenviz.cpp  anode.cpp  bbox.cpp  bounds.cpp  bounds_glrender.cpp  bounds_glrender.hpp  bsphere.cpp  camera.cpp  context.cpp  context_resource.cpp  cuda_error.cpp  draw_program.cpp  error.cpp  gl_buffer.cpp  gl_buffer.cu  gl_error.cpp  gl_framebuffer.cpp  gl_shader.cpp  gl_shader_program.cpp  gl_texture.cpp  math.cpp  pose.cpp  projection.cpp  read_file.cpp  scene.cpp  se3.cpp  so3.cpp  style.cpp  time_measurer.cpp  trackball_camera_manipulator.cpp  viewer.cpp  wasd_camera_manipulator.cpp
src/test/: CMakeLists.txt  test_camera.cpp
tenviz/: __init__.py  buffer.py  camera.py  context.py  framebuffer.py  geometry.py  nodes.py  pose.py  program.py  projection.py  texture.py  viewer.py
tenviz/_test/: test_buffer.py  test_context.py  test_draw_program.py  test_geometry.py  test_pose.py  test_program.py  test_projection.py  test_texture.py
tenviz/io/: __init__.py  _off.py  _ply.py  _test.py  _wavefront.py
tenviz/shaders/: default.frag  default.vert  phong.frag  phong.vert  point.frag  point.vert  quiver.frag
